Fix main slider overflow hidden bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,8 +219,7 @@ body {
 
 
 .main-slider {
-    width: 100vw;
-    overflow-x: hidden;
+    max-width: 100vw;
     background-color: var(--bg-dark);
 }
 
@@ -257,24 +256,35 @@ body {
     overflow: hidden;
     background-color: var(--bg-dark);
     transition: all 400ms ease-in-out;
-    position: relative;
+    position: absolute;
     top: 0;
     opacity: 0;
+    display: inline-block;
+    animation-delay: 400ms;
 }
 
 .slide.active {
     opacity: 1;
-    transform: translateX(0) !important;
-    position: absolute;
+    transform: translateX(0);
 }
 
 .slide.toRight {
-    transform: translateX(80px);
-
+    transform: translateX(15%);
+    animation: mainSlider;
 }
 
 .slide.toLeft {
-    transform: translateX(-80px);
+    transform: translateX(-15%);
+    animation: mainSlider;
+}
+
+@keyframes mainSlider {
+    from {
+        display: block;
+    }
+    to {
+        display: none;
+    }
 }
 
 .slide > img {
